[package]
name = "strftime-ruby"
# remember to set `html_root_url` in `src/lib.rs`.
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>", "x-hgg-x"]
license = "MIT"
edition = "2021"
rust-version = "1.58.0"
readme = "README.md"
repository = "https://github.com/artichoke/strftime-ruby"
documentation = "https://docs.rs/strftime-ruby"
homepage = "https://github.com/artichoke/strftime-ruby"
description = "Ruby `Time#strftime` parser and formatter"
keywords = ["ruby", "strftime", "time"]
categories = ["date-and-time", "no-std", "parser-implementations", "value-formatting"]
include = ["src/**/*", "tests/**/*", "LICENSE", "README.md"]

[lib]
name = "strftime"

[features]
# All features are enabled by default.
default = ["std"]
std = ["alloc"]
alloc = []

[dev-dependencies]

# Check that crate versions are properly updated in documentation and code when
# bumping the version.
[dev-dependencies.version-sync]
version = "0.9.3"
default-features = false
features = ["markdown_deps_updated", "html_root_url_updated"]

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu` and only builds
# that target. `strftime-ruby` has the same API and code on all targets.
default-target = "x86_64-unknown-linux-gnu"
targets = []
rustdoc-args = ["--cfg", "docsrs"]
